Fix obtaining children urls

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -18,7 +18,7 @@
         <br/>
 
         <label for="max_pages">Max pages count (0 to calculate all):</label>
-        <input type="number" min="0" id="max_pages" name="max_pages" style="width: 100%">
+        <input type="number" value="0" min="0" id="max_pages" name="max_pages" style="width: 100%">
         <br/><br/>
 
         <button type="button" id="process" name="process">Process</button>
