--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -17,8 +17,8 @@
         <input type="url" id="url" name="url" style="width: 100%">
         <br/>
 
-        <label for="max_pages">Max pages count (0 to calculate all):</label>
-        <input type="number" value="0" min="0" id="max_pages" name="max_pages" style="width: 100%">
+        <label for="max_requests">Max request count (0 to calculate all):</label>
+        <input type="number" value="0" min="0" id="max_requests" name="max_requests" style="width: 100%">
         <br/><br/>
 
         <button type="button" id="process" name="process">Process</button>
