--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -23,6 +23,8 @@
 
         <button type="button" id="process" name="process">Process</button>
         <br/><br/>
+
+        <label id="pageRanks"></label>
     </div>
 
     <div class="column70">
